!51 实现预览加密的（受密码保护）office文件 * 1. 修复getCorsFile接口高危安全漏洞 * 1. 优化密码错误提示（“密码错误，请重新输入密码。”） * 1. 修复PPT重复预览bug，此bug导致ppt每次预览会执行两次转换（请求两次onlinePreview接口），在大文件尤其耗时（双倍时… * 1. 【加密office预览】优化受密码保护的office文件检查逻辑，提升旧文件格式的兼容性 * 1. 【加密office预览】优化office文件是否受密码保护判断逻辑，避免兼容性误判 * 1. 【加密office预览】优化重新输入密码提示。 * 1. 【加密office预览】优化当密码输入错误后，不是抛出异常，而是提示用户重新输入 * 1. 优化prompt提示框的输入密码提示样式 * 1. 实现基于userToken缓存加密文件，没有userToken的加密文件不缓存 * 1. 优化docker构建方案，使用分层构建方式，采用层级缓存解决构建慢发布慢等问题。从原本5分钟左右缩短至几秒 * 1. 加密文件暂时不缓存（后续基于用户token实现，基于用户缓存） * 1. 优化office文件下载逻辑，跳过重复下载（大量节约带宽与磁盘空间）。 * 1. 修复预览不同类型的加密office文件bug * 实现预览加密的（受密码保护）office文件

--- a/office-plugin/pom.xml
+++ b/office-plugin/pom.xml
@@ -3,7 +3,6 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <artifactId>kkFileView-parent</artifactId>
         <groupId>cn.keking</groupId>
@@ -27,19 +26,9 @@
             <version>2.7</version>
         </dependency>
         <dependency>
-            <groupId>org.openoffice</groupId>
-            <artifactId>juh</artifactId>
-            <version>3.2.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openoffice</groupId>
-            <artifactId>ridl</artifactId>
-            <version>3.2.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openoffice</groupId>
-            <artifactId>unoil</artifactId>
-            <version>3.2.1</version>
+            <groupId>org.libreoffice</groupId>
+            <artifactId>libreoffice</artifactId>
+            <version>7.1.4</version>
         </dependency>
         <dependency>
             <!-- for the command line tool -->
