更新相关依赖版本

--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,34 @@
 
     <properties>
         <java.version>1.8</java.version>
+
         <spring.boot.version>2.4.2</spring.boot.version>
+        <poi.version>5.2.2</poi.version>
+        <xdocreport.version>1.0.6</xdocreport.version>
+        <xstream.version>1.4.19</xstream.version>
+        <junrar.version>7.4.1</junrar.version>
+        <redisson.version>3.2.0</redisson.version>
+        <sevenzipjbinding.version>16.02-2.01</sevenzipjbinding.version>
+        <tukaani.version>1.8</tukaani.version>
+        <jchardet.version>1.0</jchardet.version>
+        <antlr.version>2.7.7</antlr.version>
+        <concurrentlinkedhashmap.version>1.4.2</concurrentlinkedhashmap.version>
+        <rocksdb.version>5.17.2</rocksdb.version>
+        <pdfbox.version>2.0.26</pdfbox.version>
+        <galimatias.version>0.2.1</galimatias.version>
+        <bytedeco.version>1.5.2</bytedeco.version>
+        <opencv.version>4.1.2-1.5.2</opencv.version>
+        <openblas.version>0.3.6-1.5.1</openblas.version>
+        <ffmpeg.version>4.2.1-1.5.2</ffmpeg.version>
+        <itext.version>2.1.7</itext.version>
+        <commons-cli.version>1.2</commons-cli.version>
+        <commons-net.version>3.6</commons-net.version>
+        <commons-lang3.version>3.7</commons-lang3.version>
+        <commons-compress.version>1.21</commons-compress.version>
+
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
