--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
         <openblas.version>0.3.6-1.5.1</openblas.version>
         <ffmpeg.version>4.2.1-1.5.2</ffmpeg.version>
         <itext.version>2.1.7</itext.version>
+        <httpclient.version>3.1</httpclient.version>
+
         <commons-cli.version>1.2</commons-cli.version>
         <commons-net.version>3.6</commons-net.version>
         <commons-lang3.version>3.7</commons-lang3.version>
