--- a/server/pom.xml
+++ b/server/pom.xml
@@ -183,7 +183,7 @@
             <artifactId>aspose-cad</artifactId>
             <version>19.9</version>
             <scope>system</scope>
-            <systemPath>${basedir}/lib/aspose-cad-19.9.jar</systemPath>
+            <systemPath>${pom.basedir}/lib/aspose-cad-19.9.jar</systemPath>
         </dependency>
         <!-- 编码识别 -->
         <dependency>
@@ -191,7 +191,7 @@
             <artifactId>cpdetector</artifactId>
             <version>1.04</version>
             <scope>system</scope>
-            <systemPath>${basedir}/lib/cpdetector-1.04.jar</systemPath>
+            <systemPath>${pom.basedir}/lib/cpdetector-1.04.jar</systemPath>
         </dependency>
         <!-- url 规范化 -->
         <dependency>
@@ -260,14 +260,14 @@
             <artifactId>jai_core</artifactId>
             <version>1.1.3</version>
             <scope>system</scope>
-            <systemPath>${basedir}/lib/jai_core-1.1.3.jar</systemPath>
+            <systemPath>${pom.basedir}/lib/jai_core-1.1.3.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>javax.media</groupId>
             <artifactId>jai_codec</artifactId>
             <version>1.1.3</version>
             <scope>system</scope>
-            <systemPath>${basedir}/lib/jai_codec-1.1.3.jar</systemPath>
+            <systemPath>${pom.basedir}/lib/jai_codec-1.1.3.jar</systemPath>
         </dependency>
 
         <!-- test dependency - start -->
