--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
         <concurrentlinkedhashmap.version>1.4.2</concurrentlinkedhashmap.version>
         <rocksdb.version>5.17.2</rocksdb.version>
         <pdfbox.version>2.0.26</pdfbox.version>
+        <jai-imageio.version>1.4.0</jai-imageio.version>
+        <jbig2-imageio.version>3.0.4</jbig2-imageio.version>
         <galimatias.version>0.2.1</galimatias.version>
         <bytedeco.version>1.5.2</bytedeco.version>
         <opencv.version>4.1.2-1.5.2</opencv.version>
