--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cn.keking</groupId>
     <artifactId>kkFileView-parent</artifactId>
-    <version>4.1.0</version>
+    <version>4.2.0-SNAPSHOT</version>
 
     <properties>
         <java.version>1.8</java.version>
