Update the installation resource address

--- a/docker/kkfileview-jdk/Dockerfile
+++ b/docker/kkfileview-jdk/Dockerfile
@@ -14,12 +14,12 @@ RUN apt-get clean && apt-get update &&\
 	apt-get install -y fontconfig ttf-mscorefonts-installer ttf-wqy-microhei ttf-wqy-zenhei xfonts-wqy &&\
 	apt-get install -y wget &&\
     cd /tmp &&\
-	wget https://kkfileview.keking.cn/server-jre-8u251-linux-x64.tar.gz &&\
+	wget https://kkview.cn/resource/server-jre-8u251-linux-x64.tar.gz &&\
 	tar -zxf /tmp/server-jre-8u251-linux-x64.tar.gz && mv /tmp/jdk1.8.0_251 /usr/local/ &&\
 
 # 安装 libreoffice
     apt-get install -y libxrender1 libxinerama1 libxt6 libxext-dev libfreetype6-dev libcairo2 libcups2 libx11-xcb1 libnss3 &&\
-    wget https://kkfileview.keking.cn/LibreOffice_7.3.7_Linux_x86-64_deb.tar.gz -cO libreoffice_deb.tar.gz &&\
+    wget https://kkview.cn/resource/LibreOffice_7.3.7_Linux_x86-64_deb.tar.gz -cO libreoffice_deb.tar.gz &&\
     tar -zxf /tmp/libreoffice_deb.tar.gz && cd /tmp/LibreOffice_7.3.7.2_Linux_x86-64_deb/DEBS &&\
     dpkg -i *.deb &&\
 
