--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -44,6 +44,8 @@ spring.redisson.password = ${KK_SPRING_REDISSON_PASSWORD:}
 cache.clean.enabled = ${KK_CACHE_CLEAN_ENABLED:true}
 #缓存自动清理时间，cache.clean.enabled = true时才有用，cron表达式，基于Quartz cron
 cache.clean.cron = ${KK_CACHE_CLEAN_CRON:0 0 3 * * ?}
+#缓存自动清理任务清理n小时前创建的文件，0为清理所有
+cache.clean.hour = ${KK_CACHE_CLEAN_HOUR:1}
 
 #######################################可在运行时动态配置#######################################
 #提供预览服务的地址，默认从请求url读，如果使用nginx等反向代理，需要手动设置
