更新TIF转换PDF插件 更新TIF转换PDF插件
Signed-off-by: 高雄 <admin@cxcp.com>

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <opencv.version>4.1.2-1.5.2</opencv.version>
         <openblas.version>0.3.6-1.5.1</openblas.version>
         <ffmpeg.version>4.2.1-1.5.2</ffmpeg.version>
-        <itext.version>2.1.7</itext.version>
+        <itextpdf.version>5.5.13.3</itextpdf.version>
         <httpclient.version>3.1</httpclient.version>
 
         <commons-cli.version>1.2</commons-cli.version>
