--- a/server/pom.xml
+++ b/server/pom.xml
@@ -244,10 +244,10 @@
             <classifier>windows-x86_64</classifier>
         </dependency>
         <dependency>
-            <groupId>com.lowagie</groupId>
-            <artifactId>itext</artifactId>
-            <version>${itext.version}</version>
-        </dependency>
+       <groupId>com.itextpdf</groupId>
+      <artifactId>itextpdf</artifactId>
+       <version>${itextpdf.version}</version>
+         </dependency>
 
         <dependency>
             <groupId>javax.media</groupId>
