新增备案信息,禁止上传类型,删除支持密码功能 新增备案信息,禁止上传类型,删除支持密码功能
Signed-off-by: 高雄 <admin@cxcp.com>

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -2,8 +2,9 @@
 server.port = ${KK_SERVER_PORT:8012}
 server.servlet.context-path= ${KK_CONTEXT_PATH:/}
 server.servlet.encoding.charset = utf-8
-#文件上传限制
+#文件上传限制前端
 spring.servlet.multipart.max-file-size=500MB
+#文件上传限制
 spring.servlet.multipart.max-request-size=500MB
 ## Freemarker 配置
 spring.freemarker.template-loader-path = classpath:/web/
@@ -117,3 +118,9 @@ watermark.angle = ${WATERMARK_ANGLE:10}
 #Tif类型图片浏览模式：tif（利用前端js插件浏览）；jpg（转换为jpg后前端显示）；pdf（转换为pdf后显示，便于打印）
 tif.preview.type = ${KK_TIF_PREVIEW_TYPE:tif}
 
+# 备案信息
+BeiAn = 
+#禁止上传类型
+prohibit =exe,dll,dat
+#删除密码
+sc.password =123456
