新增:删除转换后OFFICE、CAD、TIFF、压缩包源文件 默认开启 节约磁盘空间

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -124,3 +124,6 @@ BeiAn =
 prohibit =exe,dll,dat
 #删除密码
 sc.password =123456
+
+#删除 转换后OFFICE、CAD、TIFF、压缩包源文件 默认开启 节约磁盘空间 
+delete.source.file = true
