获取aspose-cad 为官方地址 获取aspose-cad 为官方地址
Signed-off-by: 高雄 <admin@cxcp.com>

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -23,6 +23,16 @@
         </dependencies>
     </dependencyManagement>
 
+  <repositories>
+        <repository>
+            <id>aspose-maven-repository</id>
+            <url>https://repository.aspose.com/repo</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.jodconverter</groupId>
@@ -184,8 +194,6 @@
             <groupId>com.aspose</groupId>
             <artifactId>aspose-cad</artifactId>
             <version>23.1</version>
-            <scope>system</scope>
-            <systemPath>${pom.basedir}/lib/aspose-cad-23.1.jar</systemPath>
         </dependency>
         <!-- url 规范化 -->
         <dependency>
