授信目录本地file协议正确使用方法 授信目录本地file协议正确使用方法
Signed-off-by: 高雄 <admin@cxcp.com>

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -28,7 +28,10 @@ office.plugin.task.timeout = 5m
 file.dir = ${KK_FILE_DIR:default}
 
 #允许预览的本地文件夹 默认不允许任何本地文件被预览
-#file.dir = D:\\kkFileview\\
+#WINDOWS参考 local.preview.dir =  \D:\\kkFileview\\1\\1.txt (注意前面必须添加反斜杠)
+#LINUX参考   local.preview.dir =  /opt/1.txt (注意前面必须是正斜杠)
+#使用方法 windows  file://d:/1/1.txt  linux file:/opt/1/1.txt
+#file 协议参考：https://datatracker.ietf.org/doc/html/rfc8089
 local.preview.dir = ${KK_LOCAL_PREVIEW_DIR:default}
 
 
