新增:pdf支持密码

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -193,7 +193,13 @@
          <dependency>
             <groupId>com.aspose</groupId>
             <artifactId>aspose-cad</artifactId>
-            <version>23.1</version>
+            <version>${aspose-cad.version}</version>
+        </dependency>
+        <!-- 密钥算法 -->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>${bcprov-jdk15on.version}</version>
         </dependency>
         <!-- url 规范化 -->
         <dependency>
