--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
         <ffmpeg.version>4.2.1-1.5.2</ffmpeg.version>
         <itextpdf.version>5.5.13.3</itextpdf.version>
         <httpclient.version>3.1</httpclient.version>
+        <aspose-cad.version>23.1</aspose-cad.version>
+        <bcprov-jdk15on.version>1.70</bcprov-jdk15on.version>
 
         <commons-cli.version>1.2</commons-cli.version>
         <commons-net.version>3.6</commons-net.version>
