新增前端解析xlsx方法

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -130,3 +130,5 @@ sc.password = 123456
 delete.source.file = true
 #配置PDF文件生成图片的像素大小，dpi 越高，图片质量越清晰，同时也会消耗更多的计算资源。
 pdf2jpg.dpi = 105
+#xlsx格式前端解析
+office.type.web = web
