update some default configuration

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -123,12 +123,12 @@ tif.preview.type = ${KK_TIF_PREVIEW_TYPE:tif}
 # 备案信息
 beiAn =
 #禁止上传类型
-prohibit =exe,dll,dat
+prohibit = exe,dll,dat
 #删除密码
-sc.password = 123456
+delete.password = 123456
 #删除 转换后OFFICE、CAD、TIFF、压缩包源文件 默认开启 节约磁盘空间
 delete.source.file = true
 #配置PDF文件生成图片的像素大小，dpi 越高，图片质量越清晰，同时也会消耗更多的计算资源。
-pdf2jpg.dpi = 105
+pdf2jpg.dpi = 144
 #xlsx格式前端解析
 office.type.web = web
