--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-
-   <jodconverter.version>4.4.6</jodconverter.version>
+        <jodconverter.version>4.4.6</jodconverter.version>
         <spring.boot.version>2.4.2</spring.boot.version>
         <poi.version>5.2.2</poi.version>
         <xdocreport.version>1.0.6</xdocreport.version>
@@ -59,7 +58,7 @@
     <licenses>
         <license>
             <name>Apache License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
         </license>
     </licenses>
 
