new config item support environment config

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -336,7 +336,7 @@
                 <configuration>
                     <appendAssemblyId>false</appendAssemblyId>
                     <descriptors>
-<!--                        <descriptor>src/main/assembly/dist-win32.xml</descriptor>-->
+                        <descriptor>src/main/assembly/dist-win32.xml</descriptor>
                         <descriptor>src/main/assembly/dist-linux.xml</descriptor>
                     </descriptors>
                 </configuration>
