--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -120,15 +120,15 @@ watermark.angle = ${WATERMARK_ANGLE:10}
 
 #Tif类型图片浏览模式：tif（利用前端js插件浏览）；jpg（转换为jpg后前端显示）；pdf（转换为pdf后显示，便于打印）
 tif.preview.type = ${KK_TIF_PREVIEW_TYPE:tif}
-# 备案信息
-beiAn =
+# 备案信息，默认为空
+beian = ${KK_BEIAN:default}
 #禁止上传类型
-prohibit = exe,dll,dat
+prohibit = ${KK_PROHIBIT:exe,dll,dat}
 #删除密码
-delete.password = 123456
+delete.password = ${KK_DELETE_PASSWORD:123456}
 #删除 转换后OFFICE、CAD、TIFF、压缩包源文件 默认开启 节约磁盘空间
-delete.source.file = true
+delete.source.file = ${KK_DELETE_SOURCE_FILE:true}
 #配置PDF文件生成图片的像素大小，dpi 越高，图片质量越清晰，同时也会消耗更多的计算资源。
-pdf2jpg.dpi = 144
+pdf2jpg.dpi = ${KK_PDF2JPG_DPI:144}
 #xlsx格式前端解析
-office.type.web = web
+office.type.web = ${KK_OFFICE_TYPE_WEB:web}
