--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -2,7 +2,13 @@
 server.port = ${KK_SERVER_PORT:8012}
 server.servlet.context-path= ${KK_CONTEXT_PATH:/}
 server.servlet.encoding.charset = utf-8
-#文件上传限制前端
+#启用GZIP压缩功能
+server.compression.enable= true  
+#允许压缩的响应缓冲区最小字节数，默认2048
+server.compression.min-response-size = 2048
+#压缩格式
+server.compression.mime-types=application/javascript,text/css,application/json,application/xml,text/html,text/xml,text/plain,font/woff,application/font-woff,font/eot,image/svg+xml,image/x-icon
+# 文件上传限制前端
 spring.servlet.multipart.max-file-size=500MB
 #文件上传限制
 spring.servlet.multipart.max-request-size=500MB
