CAD格式新增支持 转换成svg tif 格式 CAD 转换新增 超时结束方法

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -138,3 +138,5 @@ delete.source.file = ${KK_DELETE_SOURCE_FILE:true}
 pdf2jpg.dpi = ${KK_PDF2JPG_DPI:144}
 #xlsx格式前端解析
 office.type.web = ${KK_OFFICE_TYPE_WEB:web}
+#Cad类型图片浏览模式：tif（利用前端js插件浏览）；svg（转换为svg显示）；pdf（转换为pdf后显示，便于打印）
+cad.preview.type = ${KK_CAD_PREVIEW_TYPE:pdf}
