!170 删除功能 新增验证码方法 删除功能 新增验证码方法

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -130,6 +130,8 @@ tif.preview.type = ${KK_TIF_PREVIEW_TYPE:tif}
 beian = ${KK_BEIAN:default}
 #禁止上传类型
 prohibit = ${KK_PROHIBIT:exe,dll,dat}
+#启用验证码删除文件 默认关闭
+delete.captcha= ${KK_DELETE_CAPTCHA:false}
 #删除密码
 delete.password = ${KK_DELETE_PASSWORD:123456}
 #删除 转换后OFFICE、CAD、TIFF、压缩包源文件 默认开启 节约磁盘空间
