优化 CAD转换功能 新增CAD线程控制和CAD超时限制

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -142,6 +142,10 @@ pdf2jpg.dpi = ${KK_PDF2JPG_DPI:144}
 office.type.web = ${KK_OFFICE_TYPE_WEB:web}
 #Cad类型图片浏览模式：tif（利用前端js插件浏览）；svg（转换为svg显示）；pdf（转换为pdf后显示，便于打印）
 cad.preview.type = ${KK_CAD_PREVIEW_TYPE:pdf}
+#Cad转换超时设置
+cad.timeout =${KK_CAD_TIMEOUT:90}
+#Cad转换线程设置
+cad.thread =${KK_CAD_THREAD:5}
 
 #OFFICE转换模块设置
 #生成限制 默认不限制 使用方法 (1-5)
