office 功能调整 支持批注 转换页码限制 生成水印等等

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -131,30 +131,30 @@ beian = ${KK_BEIAN:default}
 #禁止上传类型
 prohibit = ${KK_PROHIBIT:exe,dll,dat}
 #启用验证码删除文件 默认关闭
-delete.captcha= ${KK_DELETE_CAPTCHA:true}
+delete.captcha= ${KK_DELETE_CAPTCHA:false}
 #删除密码
 delete.password = ${KK_DELETE_PASSWORD:123456}
 #删除 转换后OFFICE、CAD、TIFF、压缩包源文件 默认开启 节约磁盘空间
-delete.source.file = ${KK_DELETE_SOURCE_FILE:false}
+delete.source.file = ${KK_DELETE_SOURCE_FILE:true}
 #配置PDF文件生成图片的像素大小，dpi 越高，图片质量越清晰，同时也会消耗更多的计算资源。
 pdf2jpg.dpi = ${KK_PDF2JPG_DPI:144}
 #xlsx格式前端解析
 office.type.web = ${KK_OFFICE_TYPE_WEB:web}
 #Cad类型图片浏览模式：tif（利用前端js插件浏览）；svg（转换为svg显示）；pdf（转换为pdf后显示，便于打印）
-cad.preview.type = ${KK_CAD_PREVIEW_TYPE:svg}
+cad.preview.type = ${KK_CAD_PREVIEW_TYPE:pdf}
 
 #OFFICE转换模块设置
 #生成限制 默认不限制 使用方法 (1-5)
-office.pagerange = ${KK_office_PageRange:false}
+office.pagerange = ${KK_OFFICE_PAGERANGE:false}
 #生成水印 默认不启用 使用方法 (kkFileView)
-office.watermark  = ${KK_office_Watermark:false}
+office.watermark  = ${KK_OFFICE_WATERMARK:false}
 #OFFICE JPEG图片压缩
-office.quality = ${KK_office_Quality:80}
+office.quality = ${KK_OFFICE_QUALITY:80}
 #图像分辨率限制
-office.maximageresolution = ${KK_office_MaxImageResolution:150}
+office.maximageresolution = ${KK_OFFICE_MAXIMAGERESOLUTION:150}
 #导出书签
-office.exportbookmarks = ${KK_office_ExportBookmarks:true}
+office.exportbookmarks = ${KK_OFFICE_EXPORTBOOKMARKS:true}
 #批注作为PDF的注释
-office.exportnotes = ${KK_office_ExportNotes:true}
+office.exportnotes = ${KK_OFFICE_EXPORTNOTES:true}
 #加密文档 生成的PDF文档 添加密码(密码为加密文档的密码)
-office.documentopenpasswords = ${KK_office_DocumentOpenPassword:true}
+office.documentopenpasswords = ${KK_OFFICE_DOCUMENTOPENPASSWORD:true}
