--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -141,7 +141,7 @@ pdf2jpg.dpi = ${KK_PDF2JPG_DPI:144}
 #xlsx格式前端解析
 office.type.web = ${KK_OFFICE_TYPE_WEB:web}
 #Cad类型图片浏览模式：tif（利用前端js插件浏览）；svg（转换为svg显示）；pdf（转换为pdf后显示，便于打印）
-cad.preview.type = ${KK_CAD_PREVIEW_TYPE:pdf}
+cad.preview.type = ${KK_CAD_PREVIEW_TYPE:svg}
 #Cad转换超时设置
 cad.timeout =${KK_CAD_TIMEOUT:90}
 #Cad转换线程设置
