重构了EncodingDetectors#getJavaEncode(String filePath)方法，并附带部分测试数据
重构了EncodingDetectors#getJavaEncode(String filePath)方法，并附带部分测试数据
Co-authored-by: asiawu <asiawu3@qq.com>
Co-committed-by: asiawu <asiawu3@qq.com>

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <httpclient.version>3.1</httpclient.version>
         <aspose-cad.version>23.3</aspose-cad.version>
         <bcprov-jdk15on.version>1.70</bcprov-jdk15on.version>
+        <juniversalchardet.version>1.0.3</juniversalchardet.version>
 
         <commons-cli.version>1.2</commons-cli.version>
         <commons-net.version>3.6</commons-net.version>
