--- a/server/pom.xml
+++ b/server/pom.xml
@@ -122,6 +122,14 @@
             <artifactId>redisson</artifactId>
             <version>${redisson.version}</version>
         </dependency>
+
+        <!-- 编码检测-JUniversalCharDet-->
+        <dependency>
+            <groupId>com.googlecode.juniversalchardet</groupId>
+            <artifactId>juniversalchardet</artifactId>
+            <version>${juniversalchardet.version}</version>
+        </dependency>
+
         <!-- 解压(rar)-->
         <dependency>
             <groupId>com.github.junrar</groupId>
