首页新增 搜索 定位页码 定义显示多少内容

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -158,8 +158,14 @@ delete.captcha= ${KK_DELETE_CAPTCHA:false}
 delete.password = ${KK_DELETE_PASSWORD:123456}
 #删除 转换后OFFICE、CAD、TIFF、压缩包源文件 默认开启 节约磁盘空间
 delete.source.file = ${KK_DELETE_SOURCE_FILE:true}
-
-
+#首页初始化加载第一页
+home.pagenumber = ${DEFAULT_HOME_PAGENUMBER:1}
+#首页是否分页
+home.pagination = ${DEFAULT_HOME_PAGINATION:true}
+#首页初始化单页记录数
+home.pagesize = ${DEFAULT_HOME_PAGSIZE:15}
+#首页显示查询框
+home.search = ${DEFAULT_HOME_SEARCH:true}
 
 #Tif类型设置
 #Tif类型图片浏览模式：tif（利用前端js插件浏览）；jpg（转换为jpg后前端显示）；pdf（转换为pdf后显示，便于打印）
