部分gbk文件无法识别，加入新库

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -129,6 +129,11 @@
             <artifactId>juniversalchardet</artifactId>
             <version>${juniversalchardet.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.ibm.icu</groupId>
+            <artifactId>icu4j</artifactId>
+            <version>${icu4j.version}</version>
+        </dependency>
 
         <!-- 解压(rar)-->
         <dependency>
