增加队列转换任务完成的日志和增加多线程的队列处理任务

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -79,6 +79,8 @@ base.url = ${KK_BASE_URL:default}
 trust.host = ${KK_TRUST_HOST:default}
 #文本类型，默认如下，可自定义添加
 simText = ${KK_SIMTEXT:txt,html,htm,asp,jsp,xml,json,properties,md,gitignore,log,java,py,c,cpp,sql,sh,bat,m,bas,prg,cmd}
+# 文件转换任务的线程数量
+file.convert.thread.count = 5
 
 
 #FTP模块设置
