feat: 新增预览文件 host 黑名单机制

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -81,6 +81,9 @@ base.url = ${KK_BASE_URL:default}
 #信任站点，多个用','隔开，设置了之后，会限制只能预览来自信任站点列表的文件，默认不限制
 #trust.host = kkview.cn
 trust.host = ${KK_TRUST_HOST:default}
+#不信任站点，多个用','隔开，设置了之后，会限制来自不信任站点列表的文件，默认不限制
+#not.trust.host = kkview.cn
+not.trust.host= ${KK_NOT_TRUST_HOST:default}
 #文本类型，默认如下，可自定义添加
 simText = ${KK_SIMTEXT:txt,html,htm,asp,jsp,xml,json,properties,md,gitignore,log,java,py,c,cpp,sql,sh,bat,m,bas,prg,cmd}
 
