--- a/server/pom.xml
+++ b/server/pom.xml
@@ -99,6 +99,11 @@
             <version>${xdocreport.version}</version>
         </dependency>
         <!-- poi start -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+             <version>4.4</version>
+        </dependency>
 
         <!-- 对 rar5 的支持 和其他众多压缩支持 可参考 package net.sf.sevenzipjbinding.ArchiveFormat; -->
         <dependency>
