--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <aspose-cad.version>23.9</aspose-cad.version>
         <bcprov-jdk15on.version>1.70</bcprov-jdk15on.version>
         <juniversalchardet.version>1.0.3</juniversalchardet.version>
+        <httpcomponents.version>4.5.14</httpcomponents.version>
 
         <commons-cli.version>1.5.0</commons-cli.version>
         <commons-net.version>3.9.0</commons-net.version>
