--- a/docker/kkfileview-jdk/Dockerfile
+++ b/docker/kkfileview-jdk/Dockerfile
@@ -1,38 +1,31 @@
-FROM ubuntu:20.04
-MAINTAINER chenjh "842761733@qq.com"
-# 内置一些常用的中文字体，避免普遍性乱码
-COPY fonts/* /usr/share/fonts/chinese/
-RUN apt-get clean && apt-get update &&\
-	sed -i 's/http:\/\/archive.ubuntu.com/https:\/\/mirrors.aliyun.com/g' /etc/apt/sources.list &&\
-	sed -i 's/# deb/deb/g' /etc/apt/sources.list &&\
-	apt-get install -y --reinstall ca-certificates &&\
-	apt-get clean && apt-get update &&\
-	apt-get install -y locales language-pack-zh-hans &&\
-	localedef -i zh_CN -c -f UTF-8 -A /usr/share/locale/locale.alias zh_CN.UTF-8 && locale-gen zh_CN.UTF-8 &&\
+FROM ubuntu:24.04
+
+RUN sed -i 's@//.*archive.ubuntu.com@//mirrors.aliyun.com@g' /etc/apt/sources.list.d/ubuntu.sources &&\
+    sed -i 's@//security.ubuntu.com@//mirrors.aliyun.com@g' /etc/apt/sources.list.d/ubuntu.sources &&\
+    sed -i 's@//ports.ubuntu.com@//mirrors.aliyun.com@g' /etc/apt/sources.list.d/ubuntu.sources &&\
+	apt-get update &&\
     export DEBIAN_FRONTEND=noninteractive &&\
-	apt-get install -y tzdata && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime &&\
-	apt-get install -y fontconfig ttf-mscorefonts-installer ttf-wqy-microhei ttf-wqy-zenhei xfonts-wqy &&\
-	apt-get install -y wget &&\
-    cd /tmp &&\
-	wget https://kkview.cn/resource/server-jre-8u251-linux-x64.tar.gz &&\
-	tar -zxf /tmp/server-jre-8u251-linux-x64.tar.gz && mv /tmp/jdk1.8.0_251 /usr/local/ &&\
+	apt-get install -y --no-install-recommends openjdk-8-jre tzdata locales xfonts-utils fontconfig libreoffice-nogui &&\
+    echo 'Asia/Shanghai' > /etc/timezone &&\
+    ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime &&\
+    localedef -i zh_CN -c -f UTF-8 -A /usr/share/locale/locale.alias zh_CN.UTF-8 &&\
+    locale-gen zh_CN.UTF-8 &&\
+# 安装微软字体
+    # apt-get install -y --no-install-recommends ttf-mscorefonts-installer &&\
+# 安装文泉驿字体
+    # apt-get install -y --no-install-recommends ttf-wqy-microhei ttf-wqy-zenhei xfonts-wqy &&\
+# 清理临时文件
+	apt-get autoremove -y &&\
+    apt-get clean &&\
+    rm -rf /var/lib/apt/lists/*
 
-# 安装 libreoffice
-    apt-get install -y libxrender1 libxinerama1 libxt6 libxext-dev libfreetype6-dev libcairo2 libcups2 libx11-xcb1 libnss3 &&\
-    wget https://downloadarchive.documentfoundation.org/libreoffice/old/7.5.3.2/deb/x86_64/LibreOffice_7.5.3.2_Linux_x86-64_deb.tar.gz -cO libreoffice_deb.tar.gz &&\
-    tar -zxf /tmp/libreoffice_deb.tar.gz && cd /tmp/LibreOffice_7.5.3.2_Linux_x86-64_deb/DEBS &&\
-    dpkg -i *.deb &&\
+# 内置一些常用的中文字体，避免普遍性乱码. 建议安装思源字体 https://zh-cn.libreoffice.org/download/fonts/
+ADD fonts/* /usr/share/fonts/chinese/
 
-#  清理临时文件
-	rm -rf /tmp/* && rm -rf /var/lib/apt/lists/* &&\
-    cd /usr/share/fonts/chinese &&\
+RUN cd /usr/share/fonts/chinese &&\
+    # 安装字体
     mkfontscale &&\
     mkfontdir &&\
     fc-cache -fv
 
-ENV JAVA_HOME /usr/local/jdk1.8.0_251
-ENV CLASSPATH $JAVA_HOME/lib/dt.jar:$JAVA_HOME/lib/tools.jar
-ENV PATH $PATH:$JAVA_HOME/bin
-ENV LANG zh_CN.UTF-8
-ENV LC_ALL zh_CN.UTF-8
-CMD ["/bin/bash"]
+ENV LANG=zh_CN.UTF-8 LC_ALL=zh_CN.UTF-8
