容易引起歧义的环境变量命名

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -162,7 +162,7 @@ watermark.angle = ${WATERMARK_ANGLE:10}
 
 #首页功能设置
 #是否禁用首页文件上传
-file.upload.disable = ${KK_FILE_UPLOAD_ENABLED:false}
+file.upload.disable = ${KK_FILE_UPLOAD_DISABLE:false}
 # 备案信息，默认为空
 beian = ${KK_BEIAN:default}
 #禁止上传类型
