--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -78,6 +78,8 @@ cache.clean.cron = ${KK_CACHE_CLEAN_CRON:0 0 3 * * ?}
 #提供预览服务的地址，默认从请求url读，如果使用nginx等反向代理，需要手动设置
 #base.url = https://file.keking.cn
 base.url = ${KK_BASE_URL:default}
+#站到设置了防盗链的，设置referer
+referer.host = ${KK_REFERER_HOST:}
 #信任站点，多个用','隔开，设置了之后，会限制只能预览来自信任站点列表的文件，默认不限制
 #trust.host = kkview.cn
 trust.host = ${KK_TRUST_HOST:default}
